<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_persons_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/text_title_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_persons_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/person_hint"
            android:imeOptions="flagNoFullscreen"
            android:inputType="textCapSentences|textAutoCorrect"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_title_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/title_color"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintBottom_toTopOf="@+id/radio_group_colors"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/button_bottom_sheet_persons">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_indigo"
            style="@style/Widget.Splitch.CompoundButton.RadioButton.Indigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:useMaterialThemeColors="false"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_light_blue"
            style="@style/Widget.Splitch.CompoundButton.RadioButton.LightBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:useMaterialThemeColors="false"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_pink"
            style="@style/Widget.Splitch.CompoundButton.RadioButton.Pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:useMaterialThemeColors="false"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_red"
            style="@style/Widget.Splitch.CompoundButton.RadioButton.Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:useMaterialThemeColors="false" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_purple"
            style="@style/Widget.Splitch.CompoundButton.RadioButton.Purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:useMaterialThemeColors="false"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_bottom_sheet_persons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/action_add"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>